--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1132,6 +1132,81 @@ a {
   background-color: #232323;
   overflow: hidden;
 }
+.cid-tkB3hv6EXK {
+  padding-top: 120px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-tkB3hv6EXK .title {
+  margin-bottom: 2rem;
+}
+.cid-tkB3hv6EXK .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-tkB3hv6EXK a:not([href]):not([tabindex]) {
+  color: #fff;
+  border-radius: 3px;
+}
+.cid-tkB3hv6EXK a.btn-white:not([href]):not([tabindex]) {
+  color: #333;
+}
+.cid-tkB3hv6EXK textarea.form-control {
+  min-height: 188px;
+}
+.cid-tkB3hUSuex {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-tkB3hUSuex div.b {
+  padding-top: 2rem;
+}
+.cid-tkB3hUSuex .mbr-text {
+  color: #767676;
+  margin: 0;
+  padding-top: 1.5rem;
+}
+.cid-tkB3hUSuex a:not([href]):not([tabindex]) {
+  color: #fff;
+  border-radius: 3px;
+}
+.cid-tkB3hUSuex .google-map {
+  height: 25rem;
+  position: relative;
+}
+.cid-tkB3hUSuex .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-tkB3hUSuex .google-map [data-state-details] {
+  color: #6b6763;
+  font-family: Montserrat;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-tkB3hUSuex .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-tkB3hUSuex .google-map[data-state="loading"] [data-state-details] {
+  display: none;
+}
+.cid-tkB3hUSuex div.left-block.wrapper {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+@media (max-width: 767px) {
+  .cid-tkB3hUSuex div.left-block.wrapper {
+    padding-bottom: 3rem;
+  }
+}
 .cid-sFGzlAXw3z .navbar-dropdown {
   position: relative !important;
 }
@@ -1476,80 +1551,6 @@ a {
     max-width: calc(100% + 2rem);
     left: -1rem;
   }
-}
-.cid-sTJA8xcOIu {
-  padding-top: 8rem;
-  padding-bottom: 8rem;
-  background-color: #ffffff;
-}
-.cid-sTJA8xcOIu .mbr-iconfont {
-  display: block;
-  font-size: 5rem;
-  color: #c37a7a;
-  margin-bottom: 2rem;
-}
-.cid-sTJA8xcOIu .card-wrapper {
-  padding: 3rem;
-  background: #bed3f9;
-  border-radius: 4px;
-}
-@media (max-width: 992px) {
-  .cid-sTJA8xcOIu .card-wrapper {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-sTJA8xcOIu .card-wrapper {
-    padding: 3rem 1rem;
-  }
-}
-.cid-sTJA8xcOIu .mbr-section-title {
-  color: #000000;
-}
-.cid-sTJA8xcOIu .card-title {
-  color: #000000;
-}
-.cid-sTJA8xcOIu .mbr-text {
-  color: #353535;
-}
-.cid-sTJA8xcOIu .mbr-section-subtitle {
-  color: #000000;
-}
-.cid-sTJA8xcOIu .link {
-  color: #6592e6;
-}
-.cid-sTJAgFP4mb {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-  background: #ffffff;
-}
-.cid-sTJAgFP4mb .google-map {
-  height: 30rem;
-  position: relative;
-}
-.cid-sTJAgFP4mb .google-map iframe {
-  height: 100%;
-  width: 100%;
-}
-.cid-sTJAgFP4mb .google-map [data-state-details] {
-  color: #6b6763;
-  height: 1.5em;
-  margin-top: -0.75em;
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-  position: absolute;
-  text-align: center;
-  top: 50%;
-  width: 100%;
-}
-.cid-sTJAgFP4mb .google-map[data-state] {
-  background: #e9e5dc;
-}
-.cid-sTJAgFP4mb .google-map[data-state="loading"] [data-state-details] {
-  display: none;
-}
-.cid-sTJAgFP4mb .mbr-section-title {
-  color: #000000;
 }
 .cid-sTJz8jIWD8 {
   padding-top: 30px;
